--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-100 text-gray-900">
+<html lang="en" class="h-full bg-gray-50 text-gray-900">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support Tickets – Tidyzenic Admin</title>
 
-    <!-- Local Tailwind Build -->
+    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/styles.css" />
 
     <!-- Scripts -->
@@ -16,8 +16,8 @@
 
     <style>
       @keyframes fade-in {
-        from { opacity: 0; transform: scale(0.95); }
-        to { opacity: 1; transform: scale(1); }
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
       }
       .animate-fade-in {
         animation: fade-in 0.2s ease-out;
@@ -25,7 +25,7 @@
     </style>
   </head>
 
-  <body class="min-h-screen overflow-auto">
+  <body class="min-h-screen flex flex-col bg-gray-50">
     <!-- Mobile Header -->
     <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
       <div class="flex items-center space-x-2">
@@ -35,50 +35,47 @@
           </svg>
         </button>
         <span class="font-bold text-lg text-blue-600">Admin</span>
-        <span id="userName" class="ml-4 text-sm text-gray-600"></span>
+        <span id="userName" class="ml-4 text-sm text-gray-500"></span>
       </div>
     </header>
 
-    <!-- Layout -->
-    <div class="flex min-h-screen">
+    <div class="flex flex-1">
       <!-- Sidebar -->
       <div id="sidebar-container"></div>
+      <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 hidden z-30 md:hidden"></div>
 
-      <!-- Mobile Backdrop -->
-      <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
-
-      <!-- Main Content -->
-      <main class="flex-1 overflow-y-auto p-4 md:p-8">
+      <!-- Main -->
+      <main class="flex-1 p-6 md:p-10">
         <div class="max-w-5xl mx-auto">
-          <!-- Header -->
+          <!-- Page Header -->
           <div class="flex items-center justify-between mb-6">
-            <h1 class="text-2xl font-semibold text-blue-700">Support Tickets</h1>
+            <h1 class="text-3xl font-bold text-blue-700">Support Tickets</h1>
             <div class="relative">
-              <button id="notifBtn" class="relative p-2 rounded-full hover:bg-gray-200">
+              <button id="notifBtn" class="relative p-2 rounded-full bg-white hover:bg-gray-100 shadow">
                 🔔
-                <span id="notifCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs rounded-full w-5 h-5 flex items-center justify-center hidden">0</span>
+                <span id="notifCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs font-semibold rounded-full w-5 h-5 flex items-center justify-center hidden">0</span>
               </button>
-              <div id="notifDropdown" class="absolute right-0 mt-2 w-64 bg-white shadow-lg rounded-lg hidden z-50">
-                <ul id="notifList" class="divide-y divide-gray-200 max-h-64 overflow-y-auto"></ul>
+              <div id="notifDropdown" class="absolute right-0 mt-2 w-72 bg-white shadow-xl rounded-xl hidden z-50 overflow-hidden">
+                <ul id="notifList" class="divide-y divide-gray-100 max-h-64 overflow-y-auto text-sm"></ul>
               </div>
             </div>
           </div>
 
-          <!-- Search Bar -->
+          <!-- Search -->
           <div class="mb-6">
             <input
               type="text"
               id="ticketSearch"
               placeholder="Search tickets..."
-              class="w-full px-4 py-2 border rounded shadow-sm focus:outline-none focus:ring"
+              class="w-full px-4 py-3 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
             />
           </div>
 
-          <!-- Ticket List -->
-          <div id="ticketList" class="space-y-4"></div>
+          <!-- Tickets -->
+          <div id="ticketList" class="space-y-5"></div>
 
           <!-- Empty State -->
-          <div id="emptyState" class="hidden text-center text-gray-500 mt-10">
+          <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
             <p>No support tickets found.</p>
           </div>
         </div>
@@ -87,12 +84,17 @@
 
     <!-- Modal -->
     <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
-      <div class="bg-white w-full max-w-md p-6 rounded-xl shadow-xl relative animate-fade-in">
-        <button id="modalClose" class="absolute top-3 right-3 text-gray-400 hover:text-gray-900 text-2xl font-bold">&times;</button>
-        <h2 id="modalTitle" class="text-xl font-semibold mb-4 text-blue-700">Reply to Ticket</h2>
-        <textarea id="modalTextarea" rows="5" class="w-full p-3 border rounded shadow-sm focus:outline-none focus:ring resize-none" placeholder="Write your reply..."></textarea>
+      <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl relative animate-fade-in">
+        <button id="modalClose" class="absolute top-3 right-3 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
+        <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
+        <textarea
+          id="modalTextarea"
+          rows="5"
+          placeholder="Write your reply..."
+          class="w-full p-4 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring focus:ring-blue-500"
+        ></textarea>
         <div class="mt-4 text-right">
-          <button id="modalSubmit" class="bg-blue-600 hover:bg-blue-700 text-white px-5 py-2 rounded shadow">Send Reply</button>
+          <button id="modalSubmit" class="bg-blue-600 text-white px-5 py-2 rounded-lg hover:bg-blue-700 shadow">Send Reply</button>
         </div>
       </div>
     </div>
