--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -5,10 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Support Tickets – Tidyzenic Admin</title>
 
-    <!-- Tailwind CSS -->
     <link rel="stylesheet" href="/styles.css" />
-
-    <!-- Scripts -->
     <script defer src="/socket.io/socket.io.js"></script>
     <script defer src="/admin/js/tickets.js"></script>
     <script defer src="/admin/js/load-sidebar.js"></script>
@@ -16,26 +13,24 @@
 
     <style>
       @keyframes fade-in {
-        from { opacity: 0; transform: translateY(10px); }
+        from { opacity: 0; transform: translateY(8px); }
         to { opacity: 1; transform: translateY(0); }
       }
-      .animate-fade-in {
-        animation: fade-in 0.2s ease-out;
-      }
+      .animate-fade-in { animation: fade-in 0.2s ease-out; }
     </style>
   </head>
 
-  <body class="min-h-screen flex flex-col bg-gray-50">
+  <body class="h-full flex flex-col bg-gray-50">
     <!-- Mobile Header -->
-    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-50">
-      <div class="flex items-center space-x-2">
+    <header class="md:hidden flex items-center justify-between p-4 bg-white shadow sticky top-0 z-40">
+      <div class="flex items-center gap-3">
         <button id="menuToggle" class="text-gray-700 focus:outline-none">
           <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
             <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
         <span class="font-bold text-lg text-blue-600">Admin</span>
-        <span id="userName" class="ml-4 text-sm text-gray-500"></span>
+        <span id="userName" class="ml-2 text-sm text-gray-500"></span>
       </div>
     </header>
 
@@ -44,16 +39,16 @@
       <div id="sidebar-container"></div>
       <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 hidden z-30 md:hidden"></div>
 
-      <!-- Main -->
+      <!-- Main Content -->
       <main class="flex-1 p-6 md:p-10">
-        <div class="max-w-5xl mx-auto">
-          <!-- Page Header -->
-          <div class="flex items-center justify-between mb-6">
-            <h1 class="text-3xl font-bold text-blue-700">Support Tickets</h1>
+        <div class="max-w-5xl mx-auto space-y-6">
+          <!-- Header -->
+          <div class="flex items-center justify-between">
+            <h1 class="text-3xl font-semibold text-blue-700">Support Tickets</h1>
             <div class="relative">
-              <button id="notifBtn" class="relative p-2 rounded-full bg-white hover:bg-gray-100 shadow">
+              <button id="notifBtn" class="relative p-2 rounded-full bg-white hover:bg-gray-100 shadow-md">
                 🔔
-                <span id="notifCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs font-semibold rounded-full w-5 h-5 flex items-center justify-center hidden">0</span>
+                <span id="notifCount" class="absolute -top-1 -right-1 bg-red-500 text-white text-xs font-bold rounded-full w-5 h-5 flex items-center justify-center hidden">0</span>
               </button>
               <div id="notifDropdown" class="absolute right-0 mt-2 w-72 bg-white shadow-xl rounded-xl hidden z-50 overflow-hidden">
                 <ul id="notifList" class="divide-y divide-gray-100 max-h-64 overflow-y-auto text-sm"></ul>
@@ -62,10 +57,10 @@
           </div>
 
           <!-- Search -->
-          <div class="mb-6">
+          <div>
             <input
-              type="text"
               id="ticketSearch"
+              type="text"
               placeholder="Search tickets..."
               class="w-full px-4 py-3 border rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500"
             />
@@ -74,7 +69,7 @@
           <!-- Tickets -->
           <div id="ticketList" class="space-y-5"></div>
 
-          <!-- Empty State -->
+          <!-- Empty -->
           <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
             <p>No support tickets found.</p>
           </div>
@@ -82,19 +77,21 @@
       </main>
     </div>
 
-    <!-- Modal -->
-    <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
-      <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl relative animate-fade-in">
-        <button id="modalClose" class="absolute top-3 right-3 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
+    <!-- Reply Modal -->
+    <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
+      <div class="bg-white w-full max-w-lg p-6 rounded-2xl shadow-2xl animate-fade-in relative">
+        <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
         <textarea
           id="modalTextarea"
           rows="5"
           placeholder="Write your reply..."
-          class="w-full p-4 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring focus:ring-blue-500"
+          class="w-full p-4 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
         ></textarea>
         <div class="mt-4 text-right">
-          <button id="modalSubmit" class="bg-blue-600 text-white px-5 py-2 rounded-lg hover:bg-blue-700 shadow">Send Reply</button>
+          <button id="modalSubmit" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 shadow-md">
+            Send Reply
+          </button>
         </div>
       </div>
     </div>
