--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -13,10 +13,12 @@
 
     <style>
       @keyframes fade-in {
-        from { opacity: 0; transform: translateY(8px); }
+        from { opacity: 0; transform: translateY(10px); }
         to { opacity: 1; transform: translateY(0); }
       }
-      .animate-fade-in { animation: fade-in 0.2s ease-out; }
+      .animate-fade-in {
+        animation: fade-in 0.25s ease-out;
+      }
     </style>
   </head>
 
@@ -39,7 +41,7 @@
       <div id="sidebar-container"></div>
       <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 hidden z-30 md:hidden"></div>
 
-      <!-- Main Content -->
+      <!-- Main -->
       <main class="flex-1 p-6 md:p-10">
         <div class="max-w-5xl mx-auto space-y-6">
           <!-- Header -->
@@ -77,19 +79,20 @@
       </main>
     </div>
 
-    <!-- Reply Modal -->
-    <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
-      <div class="bg-white w-full max-w-lg p-6 rounded-2xl shadow-2xl animate-fade-in relative">
-        <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
+    <!-- Modal -->
+    <div id="ticketModal" class="fixed inset-0 z-50 flex items-center justify-center bg-black bg-opacity-50 px-4">
+      <div class="bg-white w-full max-w-sm p-6 rounded-xl shadow-xl animate-fade-in relative">
+        <button id="modalClose" class="absolute top-3 right-3 text-gray-400 hover:text-gray-800 text-2xl font-bold">&times;</button>
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
         <textarea
           id="modalTextarea"
-          rows="5"
+          rows="4"
           placeholder="Write your reply..."
-          class="w-full p-4 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
+          class="w-full p-3 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
         ></textarea>
-        <div class="mt-4 text-right">
-          <button id="modalSubmit" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 shadow-md">
+        <div class="mt-5 flex justify-end gap-3">
+          <button id="modalCloseCancel" class="text-sm px-4 py-2 text-gray-600 hover:text-black">Cancel</button>
+          <button id="modalSubmit" class="bg-blue-600 text-white px-5 py-2 rounded-lg hover:bg-blue-700 shadow-sm">
             Send Reply
           </button>
         </div>
