--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -79,7 +79,7 @@
 
     <!-- Reply Modal -->
     <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
-      <div class="bg-white w-full max-w-lg p-6 rounded-2xl shadow-2xl animate-fade-in relative">
+      <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in relative">
         <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
         <textarea
@@ -95,5 +95,25 @@
         </div>
       </div>
     </div>
+
+    <!-- Thread Template (Injected per Ticket) -->
+    <template id="ticketThreadTemplate">
+      <div class="border border-gray-200 rounded-xl shadow p-4 bg-white">
+        <div class="flex justify-between items-start">
+          <div>
+            <h3 class="text-lg font-semibold text-blue-700">{{subject}}</h3>
+            <p class="text-gray-600 mt-1">{{message}}</p>
+            <p class="text-xs text-gray-400 mt-2">Status: <span class="font-medium">{{status}}</span></p>
+          </div>
+          <div class="flex flex-col gap-2">
+            <button class="reply-btn text-sm text-white bg-blue-600 hover:bg-blue-700 px-3 py-1 rounded">Reply</button>
+            <button class="toggle-thread-btn text-sm text-gray-700 border border-gray-300 hover:bg-gray-100 px-3 py-1 rounded">Show Thread</button>
+          </div>
+        </div>
+        <div class="replies mt-4 hidden">
+          <!-- Replies will be dynamically inserted here -->
+        </div>
+      </div>
+    </template>
   </body>
 </html>
