--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -80,6 +80,10 @@
       <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in relative">
         <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
+
+        <!-- ✅ Thread container added here -->
+        <div id="modalThread" class="space-y-2 mb-4"></div>
+
         <textarea
           id="modalTextarea"
           rows="5"
