--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -16,7 +16,9 @@
         from { opacity: 0; transform: translateY(8px); }
         to { opacity: 1; transform: translateY(0); }
       }
-      .animate-fade-in { animation: fade-in 0.2s ease-out; }
+      .animate-fade-in {
+        animation: fade-in 0.2s ease-out;
+      }
     </style>
   </head>
 
@@ -77,11 +79,15 @@
 
     <!-- Reply Modal -->
     <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
-      <div class="bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in relative">
-        <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
+      <div class="relative bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in">
+        <!-- Close Button (correctly positioned on top-right) -->
+        <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">
+          &times;
+        </button>
+
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
 
-        <!-- ✅ Thread container added here -->
+        <!-- Thread Container -->
         <div id="modalThread" class="space-y-2 mb-4"></div>
 
         <textarea
@@ -90,6 +96,7 @@
           placeholder="Write your reply..."
           class="w-full p-4 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
         ></textarea>
+
         <div class="mt-4 text-right">
           <button id="modalSubmit" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 shadow-md">
             Send Reply
