--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -13,11 +13,109 @@
 
     <style>
       @keyframes fade-in {
-        from { opacity: 0; transform: translateY(8px); }
-        to { opacity: 1; transform: translateY(0); }
+        from {
+          opacity: 0;
+          transform: translateY(8px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
       }
-      .animate-fade-in {
+
+      /* Custom Modal Styles */
+      #ticketModal {
+        position: fixed;
+        inset: 0;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+      }
+
+      #ticketModal.active {
+        display: flex;
+      }
+
+      .modal-backdrop {
+        position: fixed;
+        inset: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: -1;
+      }
+
+      .modal-box {
+        position: relative;
+        background-color: #ffffff;
+        width: 100%;
+        max-width: 500px;
+        padding: 2rem;
+        border-radius: 16px;
+        box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
         animation: fade-in 0.2s ease-out;
+        z-index: 1;
+        font-family: sans-serif;
+      }
+
+      .modal-close {
+        position: absolute;
+        top: 1rem;
+        right: 1rem;
+        border: none;
+        background: none;
+        font-size: 1.5rem;
+        color: #888;
+        cursor: pointer;
+        transition: color 0.2s ease;
+      }
+
+      .modal-close:hover {
+        color: #000;
+      }
+
+      .modal-title {
+        margin-bottom: 1rem;
+        font-size: 1.25rem;
+        font-weight: 600;
+        color: #1e3a8a;
+      }
+
+      #modalThread {
+        margin-bottom: 1rem;
+        max-height: 200px;
+        overflow-y: auto;
+        background: #f9fafb;
+        padding: 1rem;
+        border-radius: 8px;
+        border: 1px solid #e5e7eb;
+      }
+
+      #modalTextarea {
+        width: 100%;
+        padding: 1rem;
+        border: 1px solid #d1d5db;
+        border-radius: 8px;
+        resize: none;
+        font-size: 1rem;
+        margin-bottom: 1rem;
+      }
+
+      .modal-actions {
+        text-align: right;
+      }
+
+      .modal-actions button {
+        background-color: #2563eb;
+        color: white;
+        padding: 0.5rem 1.5rem;
+        font-size: 1rem;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+      }
+
+      .modal-actions button:hover {
+        background-color: #1e40af;
       }
     </style>
   </head>
@@ -77,35 +175,21 @@
       </main>
     </div>
 
-    <!-- Reply Modal -->
-    <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
-      <div class="relative bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in">
-        <!-- Close Button (correctly positioned on top-right) -->
-        <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">
-          &times;
-        </button>
-
-        <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
-
-        <!-- Thread Container -->
-        <div id="modalThread" class="space-y-2 mb-4"></div>
-
-        <textarea
-          id="modalTextarea"
-          rows="5"
-          placeholder="Write your reply..."
-          class="w-full p-4 border rounded-lg shadow-sm resize-none focus:outline-none focus:ring-2 focus:ring-blue-500"
-        ></textarea>
-
-        <div class="mt-4 text-right">
-          <button id="modalSubmit" class="bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700 shadow-md">
-            Send Reply
-          </button>
+    <!-- Custom CSS Modal -->
+    <div id="ticketModal">
+      <div class="modal-backdrop"></div>
+      <div class="modal-box">
+        <button id="modalClose" class="modal-close">&times;</button>
+        <h2 id="modalTitle" class="modal-title">Reply to Ticket</h2>
+        <div id="modalThread"></div>
+        <textarea id="modalTextarea" rows="5" placeholder="Write your reply..."></textarea>
+        <div class="modal-actions">
+          <button id="modalSubmit">Send Reply</button>
         </div>
       </div>
     </div>
 
-    <!-- Template for Threads (Optional, used if injecting from JS) -->
+    <!-- Thread Template -->
     <template id="ticketThreadTemplate">
       <div class="border border-gray-200 rounded-xl shadow p-4 bg-white">
         <div class="flex justify-between items-start">
