--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -45,7 +45,6 @@
         <div class="max-w-5xl mx-auto space-y-6">
           <div class="flex items-center justify-between">
             <h1 class="text-3xl font-semibold text-blue-700">Support Tickets</h1>
-         
           </div>
 
           <!-- Search Bar -->
@@ -61,6 +60,13 @@
           <!-- Tickets Container -->
           <div id="ticketList" class="space-y-5"></div>
 
+          <!-- Pagination -->
+          <div id="pagination" class="flex justify-center mt-6 gap-2 hidden">
+            <button id="prevPage" class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300">Previous</button>
+            <span id="pageIndicator" class="px-4 py-2 text-gray-600 font-medium">Page 1</span>
+            <button id="nextPage" class="px-4 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300">Next</button>
+          </div>
+
           <!-- Empty State -->
           <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
             <p>No support tickets found.</p>
@@ -72,14 +78,13 @@
     <!-- Reply Modal -->
     <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
       <div class="relative bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in">
-        <!-- Close Button (correctly positioned on top-right) -->
+        <!-- Close Button -->
         <button id="modalClose" class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold">
           &times;
         </button>
 
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
 
-        <!-- Thread Container -->
         <div id="modalThread" class="space-y-2 mb-4"></div>
 
         <textarea
@@ -97,7 +102,7 @@
       </div>
     </div>
 
-    <!-- Template for Threads (Optional, used if injecting from JS) -->
+    <!-- Ticket Thread Template -->
     <template id="ticketThreadTemplate">
       <div class="border border-gray-200 rounded-xl shadow p-4 bg-white">
         <div class="flex justify-between items-start">
