--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -79,11 +79,13 @@
     <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center px-4">
       <div class="relative bg-white w-full max-w-md p-6 rounded-2xl shadow-2xl animate-fade-in">
         <!-- Close Button -->
-       <!-- Close Button (moved to top-right) -->
-<button id="modalClose"
-  class="absolute top-4 right-4 text-gray-400 hover:text-black text-2xl font-bold focus:outline-none">
-  &times;
-</button>
+       <div class="flex justify-between items-center mb-4">
+  <h2 id="modalTitle" class="text-xl font-semibold text-blue-700">Reply to Ticket</h2>
+  <button id="modalClose"
+    class="text-gray-400 hover:text-black text-2xl font-bold focus:outline-none">
+    &times;
+  </button>
+</div>
 
 
         <h2 id="modalTitle" class="text-xl font-semibold text-blue-700 mb-4">Reply to Ticket</h2>
