--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -43,13 +43,13 @@
     <div id="sidebar-container"></div>
     <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
 
-    <!-- Main Section -->
+    <!-- Main Content -->
     <main class="flex-1 p-6 md:p-10">
       <div class="max-w-5xl mx-auto space-y-6">
-        <!-- Title -->
+        <!-- Page Title -->
         <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
 
-        <!-- Search Input -->
+        <!-- Search Bar -->
         <input
           id="ticketSearch"
           type="text"
@@ -92,12 +92,12 @@
         class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
       ></textarea>
 
-      <div class="mt-4 text-right">
+      <div class="mt-6 text-right">
         <button
           id="modalSubmit"
-          class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg shadow-sm transition"
+          class="bg-blue-600 hover:bg-blue-700 text-white font-semibold text-sm px-6 py-2.5 rounded-full shadow-sm transition"
         >
-          Send Reply
+          💬 Send Reply
         </button>
       </div>
     </div>
@@ -105,23 +105,31 @@
 
   <!-- Ticket Template -->
   <template id="ticketThreadTemplate">
-    <div class="bg-white border border-gray-200 rounded-2xl shadow-md px-6 py-5 space-y-4">
-      <div>
-        <h3 class="text-xl font-semibold text-indigo-700 leading-tight">{{subject}}</h3>
-        <p class="text-sm text-gray-800 mt-1">{{message}}</p>
+    <div class="bg-white border border-gray-200 rounded-2xl shadow-md p-6 space-y-6">
+      <div class="space-y-2">
+        <h3 class="text-xl font-bold text-indigo-700 leading-tight">{{subject}}</h3>
+        <p class="text-base text-gray-800">{{message}}</p>
 
-        <div class="text-sm text-gray-600 mt-3 space-y-1">
+        <div class="text-sm text-gray-600 pt-2 space-y-1">
           <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
-          <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}}">{{status}}</span></p>
+          <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}} font-medium">{{status}}</span></p>
           <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
         </div>
       </div>
 
-      <div class="flex flex-wrap gap-2 pt-2">
-        <button class="reply-btn bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-semibold px-4 py-1.5 rounded shadow">💬 Reply</button>
-        <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-4 py-1.5 rounded">📂 Show Thread</button>
-        <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-4 py-1.5 rounded">✔ Mark Resolved</button>
-        <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-4 py-1.5 rounded">🗑 Delete</button>
+      <div class="flex flex-wrap gap-4 pt-6 border-t border-gray-100">
+        <button class="reply-btn bg-blue-600 hover:bg-blue-700 text-white text-sm font-semibold px-6 py-2.5 rounded-full shadow-sm transition">
+          💬 Reply
+        </button>
+        <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-6 py-2.5 rounded-full transition">
+          📂 Show Thread
+        </button>
+        <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-6 py-2.5 rounded-full transition">
+          ✔ Mark Resolved
+        </button>
+        <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-6 py-2.5 rounded-full transition">
+          🗑 Delete
+        </button>
       </div>
 
       <div class="replies mt-4 hidden"></div>
